--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -79,7 +79,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="72dp"
                 android:src="@drawable/ic_baseline_add_24"
                 android:contentDescription="Añadir Clientes"
                 android:onClick="@{() -> clientViewModel.onClickAddClients(context)}"/>
