--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -26,6 +26,17 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:setAdapter="@{productViewModel.recyclerProductsAdapter}"/>
 
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floating_action_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="72dp"
+                android:src="@drawable/ic_baseline_add_24"
+                android:contentDescription="Añadir Clientes"
+                android:onClick="@{() -> productViewModel.onClickAddProduct(context)}"/>
+
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </FrameLayout>
 </layout>
