--- a/app/src/main/res/layout/activity_client_details.xml
+++ b/app/src/main/res/layout/activity_client_details.xml
@@ -1,101 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.ui.products.ProductAddActivity"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <data>
+        <variable
+            name="clientDetailsViewModel"
+            type="com.listen.to.miskiatty.viewmodel.ClientDetailsViewModel" />
+    </data>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="8dp">
+        android:layout_height="match_parent"
+        tools:context=".view.ui.products.ProductAddActivity"
+        android:orientation="vertical">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar_product_details"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/white"
-            app:title="Cliente"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
-            app:menu="@menu/menu_details" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:elevation="8dp">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="160dp"
-                android:layout_height="160dp"
-                android:elevation="@dimen/cardview_default_elevation"
-                android:layout_margin="2dp"
-                android:layout_gravity="center"
-                app:cardCornerRadius="80dp">
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar_product_details"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/white"
+                app:title="Cliente"
+                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
+                app:menu="@menu/menu_details" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/btImage"
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:elevation="@dimen/cardview_default_elevation"
+                    android:layout_margin="2dp"
+                    android:layout_gravity="center"
+                    app:cardCornerRadius="80dp">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/btImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        tools:src="@drawable/ic_baseline_person_24"
+                        srcBitmap="@{clientDetailsViewModel.client.image}"
+                        android:elevation="@dimen/cardview_default_elevation"
+                        android:scaleType="centerCrop" />
+                </androidx.cardview.widget.CardView>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    tools:text="Nombre del Cliente"
+                    android:text="@{clientDetailsViewModel.client.name}"
+                    android:gravity="center"
+                    android:textSize="20sp" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="Número del Cliente"
+                    android:text="@{clientDetailsViewModel.client.name}"
+                    android:gravity="center"
+                    android:textSize="18sp" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="Dirección del Cliente"
+                    android:text="@{clientDetailsViewModel.client.name}"
+                    android:gravity="center"
+                    android:textSize="16sp" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="10dp"
+                    android:layout_marginStart="8dp"
+                    tools:text="Pedidos"
+                    android:text="@{clientDetailsViewModel.client.name}"
+                    android:textSize="20sp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_clients"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    tools:src="@drawable/ic_baseline_person_24"
-                    srcBitmap="@{productDetailsViewModel.product.image}"
-                    android:elevation="@dimen/cardview_default_elevation"
-                    android:scaleType="centerCrop" />
-            </androidx.cardview.widget.CardView>
+                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                <!--app:setAdapter="@{}"-->
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                tools:text="Nombre del Cliente"
-                android:text="@{productDetailsViewModel.product.name}"
-                android:gravity="center"
-                android:textSize="20sp" />
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="Número del Cliente"
-                android:text="@{productDetailsViewModel.product.name}"
-                android:gravity="center"
-                android:textSize="18sp" />
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="Dirección del Cliente"
-                android:text="@{productDetailsViewModel.product.name}"
-                android:gravity="center"
-                android:textSize="16sp" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="10dp"
-                android:layout_marginStart="8dp"
-                tools:text="Pedidos"
-                android:text="@{productDetailsViewModel.product.name}"
-                android:textSize="20sp" />
+        </ScrollView>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_clients"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-            <!--app:setAdapter="@{}"-->
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-    </ScrollView>
-
-</androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</layout>
