--- a/app/src/main/res/menu/menu_details.xml
+++ b/app/src/main/res/menu/menu_details.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/edit_product"
+        android:id="@+id/edit"
         android:title="Editar"
         android:icon="@drawable/ic_baseline_edit_24"
         app:showAsAction="ifRoom"/>
