--- a/app/src/main/res/menu/menu_clients_add.xml
+++ b/app/src/main/res/menu/menu_clients_add.xml
@@ -2,9 +2,15 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/search_product"
+        android:id="@+id/search_contact"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="Buscar"
         app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/confirm_clients"
+        android:title="Confirmar"
+        android:icon="@drawable/ic_baseline_check_24"
         app:showAsAction="ifRoom"/>
 </menu>
