--- a/app/src/main/res/layout/template_client_add.xml
+++ b/app/src/main/res/layout/template_client_add.xml
@@ -29,7 +29,8 @@
                 android:id="@+id/checkboxContact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|end"/>
+                android:layout_gravity="center|end"
+                android:onClick="@{() -> clientsAddViewModel.onClickListenerCheckBox(position)}"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
